kubernetes/apps/selfhosted/n8n/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: n8n
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
  ingress:
    # open-webui
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui-pipelines
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "5678"
              protocol: TCP

  egress:
    # open-webui
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui-pipelines
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "9099"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: open-webui
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "POST"
                path: "/api/chat/completions"

    # actual-api
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: actual-api
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "5007"
              protocol: TCP

    # ghostfolio
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ghostfolio
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "3333"
              protocol: TCP

    # wekan
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: wekan
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

    # metamcp
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: metamcp
            k8s:io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "12008"
              protocol: TCP
